--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"pnpm -F stencil-header-main run build && pnpm -F react-project -F vue-project run dev"
   },
   "keywords": [],
   "author": "",
