--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "hoist": false,
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
